# PwZN2022_Live

./: .gitignore  pyproject.toml
projects/: project004.md  project004prym.md  project005.md  project006.md  project007.md  project008.md  project009.md  project010.md  project011.md
scripts/Lab001/: argparse001.py  ascii_graph001.py  files001.py  rich001.py  tqdm001.py
scripts/Lab002/: generators001.py  objects001.py  pillow001.py
scripts/Lab003/: decorators001.py  decorators002.py  decorators003.py  decorators004.py  decorators005.py  decorators006.py  decorators007.py
scripts/Lab004/: json001.py  scraping001.py
scripts/Lab005/: selenium001.py  selenium002.py
scripts/Lab006/: gol.ipynb
scripts/Lab007/: sympy.ipynb
scripts/Lab009/: app.py  bokeh.ipynb
scripts/Lab010/: multiprocessing01.py
scripts/Lab011/: pandas.ipynb
scripts/LabNP/: diffeq.ipynb  numpy.ipynb
