[tool.poetry]
name = "pwzn2022-live"
version = "0.1.0"
description = ""
authors = ["Maciej J. Mrowinski <47922372+brokenpumpernickel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pwzn2022_live"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
