[tool.poetry]
name = "pwzn2022-live"
version = "0.1.0"
description = ""
authors = ["Maciej J. Mrowinski <47922372+brokenpumpernickel@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pwzn2022_live"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tqdm = "^4.64.1"
ascii-graph = "^1.5.1"
rich = "^12.6.0"
pillow = "^9.2.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
